--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,14 +3,16 @@
 
 // Variables
 @import 'variables';
-$fa-font-path:        "../webfonts";
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-//admin LTE
-@import '~admin-lte/dist/css/adminlte.css';
 
+//admin LTE
+@import '~admin-lte';
+
+//fontawesome
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
+$fa-font-path: "../webfonts";
