--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,3 +16,8 @@
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
 $fa-font-path: "../webfonts";
+
+.router-link-exact-active{
+    background-color: #045dbd;
+    color: white !important;
+}
